--- a/styles.css
+++ b/styles.css
@@ -3,78 +3,177 @@ body {
     font-family: 'Work Sans', sans-serif;
     font-weight: lighter;
     color: blueviolet;
+    background-color: #f2f2f2;
+    /* fallback background color */
+    background-color: #f2f2f2;
+    /* fallback background color */
+    /* background-image: url("char-beck-tfuqe_2T7_s-unsplash.jpg");*/
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.line {
-    width: 100%;
-    height: 1px;
-    background-color: grey;
+
+
+/* Styles for screens larger than 600px */
+@media (min-width: 601px) {
+    /* CSS rules specific to larger screens */
+
+
+    .line {
+        width: 100%;
+        height: 1px;
+        background-color: grey;
+    }
+
+    h1 {
+
+        font-size: 44px;
+        margin-top: 100px;
+        margin-left: 100px;
+        font-family: 'Work Sans', sans-serif;
+        font-weight: bold;
+        color: blue;
+    }
+
+    h2 {
+
+        font-size: 24px;
+
+        font-family: 'Work Sans', sans-serif;
+        font-weight: lighter;
+        color: blue;
+    }
+
+    p {
+        font-size: 44px;
+
+        font-family: 'Work Sans', sans-serif;
+        font-weight: lighter;
+    }
+
+    .container {
+        max-width: 90%;
+
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+
+    .row {
+        display: flex;
+        /* border: 2px solid black;*/
+        padding: 0px;
+        justify-content: left;
+        gap: 24px;
+
+
+    }
+
+    .box {
+        width: 400px;
+        height: 200px;
+        /* background-color: #ffffff; */
+        margin-right: 10px;
+        padding: 0px;
+    }
+
+    .box-red {
+        background-color: red;
+    }
+
+    .box-green {
+        background-color: green;
+    }
+
+    .box-blue {
+        background-color: blue;
+    }
+
+    .textbox {
+        width: 400px;
+
+    }
+
 }
 
-h1 {
-    
-    font-size: 44px;
-    margin-top: 100px;
-    margin-left: 100px;
-    font-family: 'Work Sans', sans-serif;
-    font-weight: bold;
-    color: blue;
-}
+/* Styles for screens smaller than 600px */
+@media (max-width: 600px) {
+    /* CSS rules specific to smaller screens */
 
-h2 {
-    
-    font-size: 24px;
-   
-    font-family: 'Work Sans', sans-serif;
-    font-weight: lighter;
-    color: blue;
-}
+    .line {
+        width: 100%;
+        height: 1px;
+        background-color: grey;
+    }
 
-p {
-    font-size: 44px;
-    
-    font-family: 'Work Sans', sans-serif;
-    font-weight: lighter;
-}
+    h1 {
 
-.container {
-    max-width: 90%;
-    
-    margin-left: 100px;
-    margin-right: 100px;
-}
+        font-size: 44px;
+        margin-top: 100px;
+        margin-left: 24px;
+        font-family: 'Work Sans', sans-serif;
+        font-weight: bold;
+        color: blue;
+    }
 
-.row {
-  display: flex;
-  /* border: 2px solid black;*/
-  padding:0px;
-  justify-content:left;
-  gap: 24px;
+    h2 {
 
-  
-}
+        font-size: 24px;
 
-.box {
-    width: 400px;
-    height: 200px;
-    /* background-color: #ffffff; */
-    margin-right: 10px;
-    padding: 0px;
-  }
-  
-  .box-red {
-    background-color: red;
-  }
-  
-  .box-green {
-    background-color: green;
-  }
-  
-  .box-blue {
-    background-color: blue;
-  }
+        font-family: 'Work Sans', sans-serif;
+        font-weight: lighter;
+        color: blue;
+    }
 
-.textbox {
-    width: 400px;
-    
+    p {
+        font-size: 44px;
+
+        font-family: 'Work Sans', sans-serif;
+        font-weight: lighter;
+    }
+
+    .container {
+        max-width: 90%;
+
+        margin-left: 24px;
+        margin-right: 24px;
+    }
+
+    .row {
+        display: flex;
+        /* border: 2px solid black;*/
+        padding: 0px;
+        justify-content: left;
+        gap: 24px;
+        flex-direction: column;
+
+    }
+
+    .box {
+        width: 400px;
+        height: 200px;
+        /* background-color: #ffffff; */
+        margin-right: 10px;
+        padding: 0px;
+    }
+
+    .box-red {
+        background-color: red;
+    }
+
+    .box-green {
+        background-color: green;
+    }
+
+    .box-blue {
+        background-color: blue;
+    }
+
+    .textbox {
+        width: 400px;
+
+    }
+
+
+
+
 }
